# yandy-arm

./: .gitattributes  .gitignore  CMakeLists.txt
cmake/: FindModules.cmake  GrepPumlFSM.cmake
cmake/Modules/: FindHySerial.cmake  FindOneMotor.cmake  FindOpenCV.cmake  FindOpenVINO.cmake  FindPinocchio.cmake  FindRPL.cmake  FindTlExpected.cmake  FindToml++.cmake
config/: effector.toml  fsm.puml  input.toml  joint.toml  log.toml  robot.toml  vision.toml
config/urdf/: yandy_urdf.urdf
config/urdf/meshes/: energy_unit.stl  link_1.STL  link_3.STL  link_4.STL  link_5.STL
config/yolo/: best.onnx
doc/: fsm.md
example/: CMakeLists.txt
example/fsm/: CMakeLists.txt  main.cpp
example/input/: CMakeLists.txt  main.cpp
example/simulate/: CMakeLists.txt  main.cpp
example/vision/: CMakeLists.txt  main.cpp  main_cv.cpp  main_video.cpp
include/yandy/: Robot.hpp  utils.hpp
include/yandy/common/: NBuf.hpp  Types.hpp
include/yandy/core/: Logger.hpp
include/yandy/modules/: Arm.hpp  ArmHW.hpp  DynamicsSolver.hpp  Effector.hpp  FSM.hpp  IArmHW.hpp  InputProvider.hpp  VisionSystem.hpp
src/: CMakeLists.txt  Robot.cpp  main.cpp
src/core/: Logger.cpp
src/modules/: Arm.cpp  ArmHW.cpp  DynamicsSolver.cpp  Effector.cpp  FSM.cpp  InputProvider.cpp  VisionSystem.cpp  fsm_puml.h.in
src/teleop_client/: CMakeLists.txt  Cargo.toml
src/teleop_client/src/: main.rs  packet.rs  robot_view.rs
